--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,40 +30,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "VHI for provinceID=1 is downloaded to downloads\\vhi_id_1_10-03-2025_20-46-01.csv...\n",
-      "VHI for provinceID=2 is downloaded to downloads\\vhi_id_2_10-03-2025_20-46-02.csv...\n",
-      "VHI for provinceID=3 is downloaded to downloads\\vhi_id_3_10-03-2025_20-46-03.csv...\n",
-      "VHI for provinceID=4 is downloaded to downloads\\vhi_id_4_10-03-2025_20-46-04.csv...\n",
-      "VHI for provinceID=5 is downloaded to downloads\\vhi_id_5_10-03-2025_20-46-04.csv...\n",
-      "VHI for provinceID=6 is downloaded to downloads\\vhi_id_6_10-03-2025_20-46-06.csv...\n",
-      "VHI for provinceID=7 is downloaded to downloads\\vhi_id_7_10-03-2025_20-46-07.csv...\n",
-      "VHI for provinceID=8 is downloaded to downloads\\vhi_id_8_10-03-2025_20-46-08.csv...\n",
-      "VHI for provinceID=9 is downloaded to downloads\\vhi_id_9_10-03-2025_20-46-10.csv...\n",
-      "VHI for provinceID=10 is downloaded to downloads\\vhi_id_10_10-03-2025_20-46-11.csv...\n",
-      "VHI for provinceID=11 is downloaded to downloads\\vhi_id_11_10-03-2025_20-46-13.csv...\n",
-      "VHI for provinceID=12 is downloaded to downloads\\vhi_id_12_10-03-2025_20-46-15.csv...\n",
-      "VHI for provinceID=13 is downloaded to downloads\\vhi_id_13_10-03-2025_20-46-16.csv...\n",
-      "VHI for provinceID=14 is downloaded to downloads\\vhi_id_14_10-03-2025_20-46-17.csv...\n",
-      "VHI for provinceID=15 is downloaded to downloads\\vhi_id_15_10-03-2025_20-46-19.csv...\n",
-      "VHI for provinceID=16 is downloaded to downloads\\vhi_id_16_10-03-2025_20-46-20.csv...\n",
-      "VHI for provinceID=17 is downloaded to downloads\\vhi_id_17_10-03-2025_20-46-22.csv...\n",
-      "VHI for provinceID=18 is downloaded to downloads\\vhi_id_18_10-03-2025_20-46-23.csv...\n",
-      "VHI for provinceID=19 is downloaded to downloads\\vhi_id_19_10-03-2025_20-46-25.csv...\n",
-      "VHI for provinceID=20 is downloaded to downloads\\vhi_id_20_10-03-2025_20-46-26.csv...\n",
-      "VHI for provinceID=21 is downloaded to downloads\\vhi_id_21_10-03-2025_20-46-28.csv...\n",
-      "VHI for provinceID=22 is downloaded to downloads\\vhi_id_22_10-03-2025_20-46-29.csv...\n",
-      "VHI for provinceID=23 is downloaded to downloads\\vhi_id_23_10-03-2025_20-46-33.csv...\n",
-      "VHI for provinceID=24 is downloaded to downloads\\vhi_id_24_10-03-2025_20-46-34.csv...\n",
-      "VHI for provinceID=25 is downloaded to downloads\\vhi_id_25_10-03-2025_20-46-35.csv...\n",
-      "VHI for provinceID=26 is downloaded to downloads\\vhi_id_26_10-03-2025_20-46-37.csv...\n",
-      "VHI for provinceID=27 is downloaded to downloads\\vhi_id_27_10-03-2025_20-46-38.csv...\n"
+      "VHI for provinceID=1 is downloaded to downloads\\vhi_id_1_11-03-2025_11-49-10.csv...\n",
+      "VHI for provinceID=2 is downloaded to downloads\\vhi_id_2_11-03-2025_11-49-11.csv...\n",
+      "VHI for provinceID=3 is downloaded to downloads\\vhi_id_3_11-03-2025_11-49-12.csv...\n",
+      "VHI for provinceID=4 is downloaded to downloads\\vhi_id_4_11-03-2025_11-49-13.csv...\n",
+      "VHI for provinceID=5 is downloaded to downloads\\vhi_id_5_11-03-2025_11-49-14.csv...\n",
+      "VHI for provinceID=6 is downloaded to downloads\\vhi_id_6_11-03-2025_11-49-15.csv...\n",
+      "VHI for provinceID=7 is downloaded to downloads\\vhi_id_7_11-03-2025_11-49-15.csv...\n",
+      "VHI for provinceID=8 is downloaded to downloads\\vhi_id_8_11-03-2025_11-49-16.csv...\n",
+      "VHI for provinceID=9 is downloaded to downloads\\vhi_id_9_11-03-2025_11-49-17.csv...\n",
+      "VHI for provinceID=10 is downloaded to downloads\\vhi_id_10_11-03-2025_11-49-18.csv...\n",
+      "VHI for provinceID=11 is downloaded to downloads\\vhi_id_11_11-03-2025_11-49-19.csv...\n",
+      "VHI for provinceID=12 is downloaded to downloads\\vhi_id_12_11-03-2025_11-49-20.csv...\n",
+      "VHI for provinceID=13 is downloaded to downloads\\vhi_id_13_11-03-2025_11-49-21.csv...\n",
+      "VHI for provinceID=14 is downloaded to downloads\\vhi_id_14_11-03-2025_11-49-22.csv...\n",
+      "VHI for provinceID=15 is downloaded to downloads\\vhi_id_15_11-03-2025_11-49-23.csv...\n",
+      "VHI for provinceID=16 is downloaded to downloads\\vhi_id_16_11-03-2025_11-49-24.csv...\n",
+      "VHI for provinceID=17 is downloaded to downloads\\vhi_id_17_11-03-2025_11-49-25.csv...\n",
+      "VHI for provinceID=18 is downloaded to downloads\\vhi_id_18_11-03-2025_11-49-26.csv...\n",
+      "VHI for provinceID=19 is downloaded to downloads\\vhi_id_19_11-03-2025_11-49-26.csv...\n",
+      "VHI for provinceID=20 is downloaded to downloads\\vhi_id_20_11-03-2025_11-49-27.csv...\n",
+      "VHI for provinceID=21 is downloaded to downloads\\vhi_id_21_11-03-2025_11-49-28.csv...\n",
+      "VHI for provinceID=22 is downloaded to downloads\\vhi_id_22_11-03-2025_11-49-29.csv...\n",
+      "VHI for provinceID=23 is downloaded to downloads\\vhi_id_23_11-03-2025_11-49-30.csv...\n",
+      "VHI for provinceID=24 is downloaded to downloads\\vhi_id_24_11-03-2025_11-49-32.csv...\n",
+      "VHI for provinceID=25 is downloaded to downloads\\vhi_id_25_11-03-2025_11-49-33.csv...\n",
+      "VHI for provinceID=26 is downloaded to downloads\\vhi_id_26_11-03-2025_11-49-34.csv...\n",
+      "VHI for provinceID=27 is downloaded to downloads\\vhi_id_27_11-03-2025_11-49-35.csv...\n"
      ]
     }
    ],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\someone\\AppData\\Local\\Temp\\ipykernel_9052\\1743727162.py:29: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\someone\\AppData\\Local\\Temp\\ipykernel_1300\\3309435147.py:28: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  dataframe['area'] = dataframe['area'].replace(reverse_indexes)\n"
      ]
     }
@@ -199,8 +199,7 @@
     "    25: \"Республіка Крим\"\n",
     "}\n",
     "\n",
-    "def maping(dataframe):\n",
-    "\n",
+    "def replace_indexes(dataframe):\n",
     "    dataframe['area'] = dataframe['area'].astype(int)\n",
     "    dataframe = dataframe[dataframe['area'] != 11]\n",
     "    dataframe = dataframe[dataframe['area'] != 20]\n",
@@ -213,7 +212,7 @@
     "    dataframe['area'] = dataframe['area'].astype(int)\n",
     "    return dataframe\n",
     "\n",
-    "dataframe = maping(dataframe)\n",
+    "dataframe = replace_indexes(dataframe)\n",
     "print(dataframe)\n",
     "\n"
    ]
@@ -234,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +347,7 @@
        "0"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +441,7 @@
        "0"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +488,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\someone\\AppData\\Local\\Temp\\ipykernel_9052\\3139253269.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\someone\\AppData\\Local\\Temp\\ipykernel_1300\\3139253269.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
